Session4 nyc-static

--- a/Session4/nyc-static/index.html
+++ b/Session4/nyc-static/index.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <h1>New Year Countdown</h1>
-    <div class="Countdown">
+    <div class="countdown">
       <div class="time">
         <h2>45</h2>
-        <p>days</p>
+        <p>Days</p>
       </div>
       <div class="time">
         <h2>22</h2>
